# palace

./: .JuliaFormatter.toml  .clang-format  .clang-tidy  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  PR657_REVIEW_RESPONSES.md  PR_REVIEWS.md  README.md  TESTING.md  THIRD-PARTY-LICENSES  THIRD-PARTY-NOTICES  clang_tidy_conversion_out  hughcars_transmonscript.json  pr735_review.md  pyproject.toml  setup.py  singularity.def  test.diff  versions.js
palace/: .clang-tidy  CMakeLists.txt  driver.cpp  driver.hpp  main.cpp
palace/cmake/: CheckCompilerFeatureSupport.cmake  GetGitDescription.cmake  GetGitDescription.cmake.in  PkgConfigHelpers.cmake  StaticAnalysisHelpers.cmake
palace/drivers/: CMakeLists.txt  basesolver.cpp  basesolver.hpp  boundarymodesolver.cpp  boundarymodesolver.hpp  drivensolver.cpp  drivensolver.hpp  eigensolver.cpp  eigensolver.hpp  electrostaticsolver.cpp  electrostaticsolver.hpp  heatsolver.cpp  heatsolver.hpp  magnetostaticsolver.cpp  magnetostaticsolver.hpp  modeanalysissolver.cpp  modeanalysissolver.hpp  newmodeanalysissolver.cpp  newmodeanalysissolver.hpp  quadmodeanalysissolver.cpp  quadmodeanalysissolver.hpp  surfacecurlsolver.cpp  surfacecurlsolver.hpp  transientsolver.cpp  transientsolver.hpp
palace/fem/: CMakeLists.txt  bilinearform.cpp  bilinearform.hpp  ceed_group_operator.cpp  ceed_group_operator.hpp  coefficient.cpp  coefficient.hpp  curlcurloperator.cpp  curlcurloperator.hpp  domain_field_evaluator.cpp  domain_field_evaluator.hpp  domain_point_field_evaluator.cpp  domain_point_field_evaluator.hpp  domainpostoperator.cpp  domainpostoperator.hpp  errorindicator.cpp  errorindicator.hpp  errorindicators.cpp  errorindicators.hpp  facenbrexchange.cpp  facenbrexchange.hpp  farfieldboundaryoperator.cpp  farfieldboundaryoperator.hpp  fespace.cpp  fespace.hpp  feutils.cpp  feutils.hpp  freqdomain.hpp  gridfunction.cpp  gridfunction.hpp  integrator.cpp  integrator.hpp  interpolation.hpp  interpolationoperator.hpp  interpolator.cpp  interpolator.hpp  laplaceoperator.cpp  laplaceoperator.hpp  lumpedelement.cpp  lumpedelement.hpp  (+38 more)
palace/fem/integ/: curlcurl.cpp  curlcurl_pml.cpp  curlcurlmass.cpp  diffusion.cpp  diffusionmass.cpp  divdiv.cpp  divdivmass.cpp  grad.cpp  mass.cpp  mixedveccurl.cpp  mixedvecgrad.cpp  vecfemass.cpp
palace/fem/libceed/: basis.cpp  basis.hpp  ceed.cpp  ceed.hpp  coefficient.cpp  coefficient.hpp  functional.cpp  functional.hpp  hash.hpp  integrator.cpp  integrator.hpp  operator.cpp  operator.hpp  restriction.cpp  restriction.hpp  utils.cpp  utils.hpp
palace/fem/qfunctions/: apply_qf.h  coeff_qf.h  curlcurl_qf.h  curlcurlmass_qf.h  diffusion_qf.h  diffusionmass_qf.h  divdiv_qf.h  divdivmass_qf.h  geom_qf.h  grad_qf.h  h1_build_qf.h  h1_qf.h  hcurl_build_qf.h  (+23 more)
palace/linalg/: CMakeLists.txt  amg.cpp  amg.hpp  ams.cpp  ams.hpp  arpack.cpp  arpack.hpp  bddc.cpp  bddc.hpp  blockprecond.cpp  blockprecond.hpp  chebyshev.cpp  chebyshev.hpp  complex.cpp  complex.hpp  complexvector.hpp  cudss.cpp  cudss.hpp  curlcurl.cpp  curlcurl.hpp  densematrix.cpp  densematrix.hpp  distrelaxation.cpp  distrelaxation.hpp  divfree.cpp  divfree.hpp  eigen.hpp  eps.hpp  errorestimator.cpp  errorestimator.hpp  feast.cpp  feast.hpp  floquetcorrection.cpp  floquetcorrection.hpp  floquetprecond.cpp  floquetprecond.hpp  fluxprojector.cpp  fluxprojector.hpp  gmg.cpp  gmg.hpp  (+37 more)
palace/models/: CMakeLists.txt  boundarymodeoperator.cpp  boundarymodeoperator.hpp  boundarymodesolver.cpp  boundarymodesolver.hpp  curlcurloperator.cpp  curlcurloperator.hpp  currentdipoleoperator.cpp  currentdipoleoperator.hpp  domainpostoperator.cpp  domainpostoperator.hpp  farfieldboundaryoperator.cpp  farfieldboundaryoperator.hpp  floquetportoperator.cpp  floquetportoperator.hpp  laplaceoperator.cpp  laplaceoperator.hpp  lumpedelementoperator.cpp  lumpedelementoperator.hpp  lumpedportoperator.cpp  lumpedportoperator.hpp  materialoperator.cpp  materialoperator.hpp  mode_assembly.cpp  mode_assembly.hpp  modeanalysisoperator.hpp  modeeigensolver.cpp  modeeigensolver.hpp  newboundarymodesolver.cpp  newboundarymodesolver.hpp  periodicboundaryoperator.cpp  periodicboundaryoperator.hpp  pml.cpp  pml.hpp  portexcitationhelper.cpp  portexcitationhelper.hpp  portexcitations.cpp  portexcitations.hpp  postoperator.cpp  postoperator.hpp  (+28 more)
palace/schema/: CMakeLists.txt  emit_schema.cpp  version.hpp
palace/utils/: CMakeLists.txt  aaa.hpp  ceedparaviewdatacollection.cpp  ceedparaviewdatacollection.hpp  communication.cpp  communication.hpp  configfile.cpp  configfile.hpp  constants.hpp  device.cpp  device.hpp  diagnostic.hpp  dorfler.cpp  dorfler.hpp  enum_string.cpp  enum_string.hpp  errorindicators.cpp  errorindicators.hpp  excitations.hpp  feutils.hpp  filesystem.hpp  freqdomain.hpp  geodata.cpp  geodata.hpp  geodata_impl.cpp  geodata_impl.hpp  iodata.cpp  iodata.hpp  iodata_concretize.cpp  jsonschema.cpp  jsonschema.hpp  labels.hpp  lumpedelement.hpp  memoryreporting.cpp  memoryreporting.hpp  meshio.cpp  meshio.hpp  mfemcoefficients.hpp  mfemintegrators.hpp  mfemoperators.hpp  (+15 more)
test/unit/: CMakeLists.txt  README.md  fixtures.cpp  fixtures.hpp  lsan_suppressions.txt  main.cpp  regression_helpers.cpp  regression_helpers.hpp  run_regression_test.sh.in  test-2d-submesh.cpp  test-aaa.cpp  test-basesolver.cpp  test-boundarymodeoperator.cpp  test-coefficient.cpp  test-config.cpp  test-constants.cpp  test-currentdipole.cpp  test-domainpostoperator.cpp  test-drivensolver.cpp  test-farfield.cpp  test-fixtures.hpp  test-floquetport.cpp  test-geodata.cpp  test-helpers.cpp  test-helpers.hpp  test-integrate-function.cpp  test-libceed.cpp  test-lumpedportintegration.cpp  test-materialoperator.cpp  test-memoryreporting.cpp  test-meshtopology.cpp  test-nondimensionalize.cpp  test-orthog.cpp  test-paraview-writer-proxy.cpp  test-pml.cpp  test-postoperator-boundary-viz.cpp  test-postoperator.cpp  test-postoperatorcsv.cpp  test-rap.cpp  test-romoperator.cpp  (+10 more)
(+61128 files in other folders)
